# MCP_project

./: client.py  mathserver.py  pyproject.toml  requirement.txt  weather.py
MCP_project.git/: config  packed-refs
MCP_project.git/objects/pack/: pack-55b2d524c9740f2af14e26b6d785c43952229804.idx  pack-55b2d524c9740f2af14e26b6d785c43952229804.pack  pack-55b2d524c9740f2af14e26b6d785c43952229804.rev
